--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-</head>
+ <head>
+  <title>
+  Taemon-Coolz's Github Page
+  </title>
+ </head>
 <body>
+   <h1>
+  Taemon-Coolz Here.
+   </h1>
 </body>
 </html>
