--- a/index.html
+++ b/index.html
@@ -8,10 +8,24 @@
   </title>
  </head>
 <body>
-  <div class="div">
-  <h1 class="title">Taemon-Coolz </h1>
-  <h1 class="title">Here.</h1>
-
+  <b>
+  <ul>
+<li><a href="index.html" style="color: #00ff00;">H<span class="highlited">O</span>ME</a></li>
+<li><a href="coding.html" style="color: #00ff00;">COD<span class="highlited">I</span>NG</a></li>
+<li><a href="writing.html" style="color: #00ff00;">W<span class="highlited">R</span>ITING</a></li>
+<li><a href="art.html" style="color: #00ff00;">AR<span class="highlited">T</span></a></li>
+  </ul>
+</b>
+  <div class="titlediv">
+  <h1 class="title" style="font-size: 98px;"> <b> Taemon-Coolz<br>Here.</b></h1>
   </div>
+
+<p class="paragraph" style="margin-left: 100px;"> <b> Hi. I'm Taemon-Coolz, a coder, artist, and writer from Georgia.<br>
+In my spare time, I like to swim, play baseball, and chat with my friends. </b> <br></p>
+
+<h2 class="title h2" style="text-align: right; font-size:86px; margin-left: 845px;"><b>Coding</b></h2>
+<div>
+<p class="paragraph" style="float: right;"><b> I know C++, HTML, and CSS. I currently only code for fun.</b></p>
+</div>
 </body>
 </html>
