--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <title>redirecting</title>
-  <meta http-equiv = "refresh" content = "1"; url = "page/index.html" />
+  <meta http-equiv = "refresh" content = "1"; url = "https://taemon-coolz.github.io/page/index.html" />
  </head>
 <body>
  redirecting
