--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
  </head>
 <body>
   <b>
-  <ul>
-<li><a href="index.html" style="color: #00ff00;">H<span class="highlited">O</span>ME</a></li>
-<li><a href="coding.html" style="color: #00ff00;">COD<span class="highlited">I</span>NG</a></li>
-<li><a href="art.html" style="color: #00ff00;">AR<span class="highlited">T</span></a></li>
-<li><a href="photography.html" style="color: #00ff00;">PHO<span class="highlited">T</span>OGRAPHY</a></li>
+  <ul style="padding-top: 10px; padding-bottom: 10px;">
+    <li><a href="index.html" style="color: #00ff00;">H<span class="highlited">O</span>ME</a></li>
+    <li><a href="coding.html" style="color: #00ff00;">COD<span class="highlited">I</span>NG</a></li>
+    <li><a href="art.html" style="color: #00ff00;">AR<span class="highlited">T</span></a></li>
+    <li><a href="photography.html" style="color: #00ff00;">PHO<span class="highlited">T</span>OGRAPHY</a></li>
   </ul>
 </b>
   <div class="titlediv">
@@ -23,9 +23,27 @@
 <p class="paragraph" style="margin-left: 100px;"> <b> Hi. I'm Taemon-Coolz, a coder, artist, and writer from Georgia.<br>
 In my spare time, I like to swim, play baseball, and chat with my friends. </b> <br></p>
 
-<h2 class="title h2" style="text-align: right; font-size:86px; margin-left: 845px;"><b>Coding</b></h2>
 <div>
-<p class="paragraph" style="float: right;"><b> I know C++, HTML, and CSS. I currently only code for fun.</b></p>
+
+<h2 class="title h2" style="text-align: right; font-size:86px; margin-left: 795px; margin-right: 50px;"><b>Coding</b></h2>
+<div>
+<p class="paragraph" style="float: right;"><b> I know C++, HTML, and CSS. I currently only code for fun.
+I tried to learn javascript, but that didn't work out well.</b></p>
 </div>
+
+</div>
+
+<h2 class="title h2" style="text-align: left; font-size:86px; margin-left: 120px; margin-right: 880px;"><b></b>Art</h2>
+<p class="paragraph" style="margin-left: 100px;"> <b> I draw digitally and physically. Digitally, I use the latest stable version of Krita
+and a Huion H640P. Physically, I use a variety of tools.</b> <br></p>
+
+<div>
+
+<h2 class="title h2" style="text-align: right; font-size:86px; margin-left: 600px;"><b>Photography</b></h2>
+<div>
+<p class="paragraph" style="float: right; margin-right: 50px;"><b> I use an Akaso EK7000. I sometimes enhance my photos in the Windows photo editor.
+I usually only take pictures be chance, when I happen to have my camera.</b></p>
+</div>
+
 </body>
 </html>
