--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ In my spare time, I like to swim, play baseball, and chat with my friends. </b> 
 <div>
 
 <h2 class="title h2" style="text-align: right; font-size:86px; margin-left: 795px; margin-right: 50px;"><b>Coding</b></h2>
-<div>
+<div style="overflow: auto;">
 <p class="paragraph" style="float: right;"><b> I know C++, HTML, and CSS. I currently only code for fun.
 I tried to learn javascript, but that didn't work out well.</b></p>
 </div>
