--- a/coding.html
+++ b/coding.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
  <head>
+
+   <div>
+      <meta charset="UTF-8">
+      <meta name="description" content="Taemon-Coolz's website.">
+      <meta name="keywords" content="Taemon-Coolz, HTML, Coding, Biography, Photography">
+      <meta name="author" content="Taemon-Coolz">
+   </div>
+
    <link rel="stylesheet"
          href="coding.css">
   <title>
@@ -9,7 +17,7 @@
  </head>
 <body>
   <b>
-  <ul>
+  <ul style="padding-top: 10px; padding-bottom: 10px;">
 <li><a href="index.html" style="color: #00ff00;">H<span class="highlited">O</span>ME</a></li>
 <li><a href="coding.html" style="color: #00ff00;">COD<span class="highlited">I</span>NG</a></li>
 <li><a href="art.html" style="color: #00ff00;">AR<span class="highlited">T</span></a></li>
@@ -24,9 +32,14 @@
   I also write HTML and CSS, but some people don't count that as coding. </b> <br></p>
 
 <h2 class="title h2" style="text-align: right; font-size:86px; margin-left: 750px;"><b>Projects</b></h2>
-<div>
+<div style="overflow: auto;">
 <p class="paragraph" style="float: right;"> <b> I post most of my works on my Github (<a href="https://github.com/Taemon-Coolz/">@Taemon-Coolz</a>)
  I've made a celsius to fahrenheit converter, and have half-made a few C++ Games. Currentlly, I'm working on a swim simulater, and this website.</b></p>
 </div>
+
+<h2 class="title h2" style="text-align: left; font-size:86px; margin-left: 50px; margin-right: 500px;"><b></b>Technologies</h2>
+<p class="paragraph" style="margin-left: 100px;"> <b> I currently use GCC to compile my C++. I write on Atom when writing HTML and C++,
+but use Nano in my terminal when writing shell.</b> <br></p>
+
 </body>
 </html>
