Corrected some stuff

--- a/coding.html
+++ b/coding.html
@@ -34,11 +34,11 @@
 <h2 class="title h2" style="text-align: right; font-size:86px; margin-left: 750px;"><b>Projects</b></h2>
 <div style="overflow: auto;">
 <p class="paragraph" style="float: right;"> <b> I post most of my works on my Github (<a href="https://github.com/Taemon-Coolz/">@Taemon-Coolz</a>)
- I've made a celsius to fahrenheit converter, and have half-made a few C++ Games. Currentlly, I'm working on a swim simulater, and this website.</b></p>
+ I've made a celsius to fahrenheit converter, and have half-made a few C++ Games. Currentlly, I'm working on a few random things, and this website.</b></p>
 </div>
 
 <h2 class="title h2" style="text-align: left; font-size:86px; margin-left: 50px; margin-right: 500px;"><b></b>Technologies</h2>
-<p class="paragraph" style="margin-left: 100px;"> <b> I currently use GCC to compile my C++. I write on Atom when writing HTML and C++,
+<p class="paragraph" style="margin-left: 100px;"> <b> I currently use G++ to compile my C++. I write on Atom/Kdevelop when writing HTML and C++,
 but use Nano in my terminal when writing shell.</b> <br></p>
 
 </body>
