--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
  
 <p class="paragraph" style="margin-left: 100px;"> <b> Hi. I'm Taemon-Coolz, a coder, artist, and writer from Georgia.<br>
-In my spare time, I like to swim, play baseball, and chat with my friends. </b> <br></p>
+In my spare time, I like to swim, play baseball and ukelele, read and draw.</b> <br></p>
 
 <div>
 
