--- a/art.html
+++ b/art.html
@@ -29,7 +29,7 @@
   </div>
 
 <p class="paragraph" style="margin-left: 100px;"> <b> I draw for fun, and most of my drawings are pretty mediocre. However,
-I have sadly been slowly drawing less and less. I'll get a portfolio together eventually.</b> <br></p>
+I have sadly been slowly drawing less and less. I'll get a portfolio together eventually, but for now I have <a href="https://deviantart.com/taemon-coolz">a Deviantart,</a> even though it doesn't have everything.</b> <br></p>
 
 <h2 class="title h2" style="text-align: right; font-size:86px; margin-left: 680px;"><b>Physical Art Tools</b></h2>
 <div style="overflow: auto;">
@@ -39,7 +39,7 @@ I'm not choosy about paper. Sometimes I also use pens (felt-tip and ball-point.)
 
 <h2 class="title h2" style="text-align: left; font-size:86px; margin-left: 50px; margin-right: 500px;"><b></b>Technologies</h2>
 <p class="paragraph" style="margin-left: 100px;"> <b> I use a Huion H640P with the latest stable Krita release. I also sometimes
-use Canva for digital designs. I want to learn to use Inkscape someday.</b> <br></p>
+use Canva for digital designs and Pixelorama for pixel art. I want to learn to use Inkscape someday.</b> <br></p>
 
 </body>
 </html>
