Removed Photography section

--- a/coding.html
+++ b/coding.html
@@ -5,7 +5,7 @@
    <div>
       <meta charset="UTF-8">
       <meta name="description" content="Taemon-Coolz's website.">
-      <meta name="keywords" content="Taemon-Coolz, HTML, Coding, Biography, Photography">
+      <meta name="keywords" content="Taemon-Coolz, HTML, Coding, Biography">
       <meta name="author" content="Taemon-Coolz">
    </div>
 
