--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  </head>
 <body>
   <b>
-  <ul style=" padding-top: 10px; padding-bottom: 10px;">
+  <ul style=" padding-top: 10px; padding-bottom: 10px; align: center;">
     <li class="menuitem"><a href="index.html" style="color: #00ff00;">H<span class="highlited">O</span>ME</a></li>
     <li class="menuitem"><a href="coding.html" style="color: #00ff00;">COD<span class="highlited">I</span>NG</a></li>
     <li class="menuitem"><a href="art.html" style="color: #00ff00;">AR<span class="highlited">T</span></a></li>
