--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <h1 class="title" style="font-size: 98px;"> <b> (Unnamed) Zombie Game Alpha</b></h1>
   </div>
  
-<p class="paragraph" style="margin-left: 100px;"> <b> This is where my new game will be hosted when I leave behind the beta stages. (Possibly never.)</b> <br></p>
+<p class="paragraph" style="margin-left: 100px;"> <b> This is where my new game is hosted, even though I'm not out of beta.</b> <br></p>
+<iframe src="./game/index.html" width="480" height="360" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
 
 
 </body>
