--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
   </ul>
 </b>
   <div class="titlediv">
-  <h1 class="title" style="font-size: 98px;"> <b> (Unnamed) Zombie Game Alpha</b></h1>
+  <h1 class="title" style="font-size: 98px;"> <b> (Unnamed) Zombie Game Beta V 1.2</b></h1>
   </div>
  
 <p class="paragraph" style="margin-left: 100px;"> <b> This is where my new game is hosted, even though I'm not out of beta.</b> <br></p>
-<iframe src="./game/index.html" width="480" height="360" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
-
+<iframe src="https://turbowarp.org/627476337/embed?addons=pause" width="499" height="416" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
 
 </body>
 </html>
