--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
  
 <p class="paragraph" style="margin-left: 100px;"> <b> This is where my new game is hosted, even though I'm not out of beta.</b> <br></p>
-<iframe src="https://turbowarp.org/627476337/embed?addons=pause" width="499" height="416" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<iframe src="https://turbowarp.org/627476337/embed?addons=pause" width="499" height="416" allowtransparency="true" frameborder="0" scrolling="no" style="align: center;" allowfullscreen></iframe>
 
 </body>
 </html>
