--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
    <link rel="stylesheet"
          href="index.css">
   <title>
-  Taemon-Coolz
+  Taemon-Coolz's ZSG
   </title>
  </head>
 <body>
   <b>
   <ul style=" padding-top: 10px; padding-bottom: 10px; align: center;">
     <li class="menuitem"><a href="changelog.md" style="color: #00ff00;">CH<span class="highlited">A</span>NGELOG</a></li>
+    <li class="menuitem"><a href="points.md" style="color: #00ff00;">P<span class="highlited">O</span>INT GUID<span class="highlited">E</span></a></li>
   </ul>
 </b>
   <div class="titlediv">
-  <h1 class="title" style="font-size: 98px;"> <b> (Unnamed) Zombie Game Beta V 1.3</b></h1>
+  <h1 class="title" style="font-size: 98px;"> <b> ZSG Beta Version 1.4</b></h1>
   </div>
  
-<p class="paragraph" style="margin-left: 100px;"> <b> This is where my new game is hosted, even though I'm not out of beta.</b> <br></p>
+<p class="paragraph" style="margin-left: 100px;"> <b>This is one location to play ZSG or view the changelog or other related docs.</b> <br></p>
 <iframe src="https://turbowarp.org/627476337/embed?addons=pause" width="499" height="416" allowtransparency="true" frameborder="0" scrolling="no" style="align: center;" allowfullscreen></iframe>
 
 </body>
