Downloads now avaliable
also version 1.0.0 now out

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
  <head>
    <link rel="stylesheet"
          href="index.css">
+         <link rel="icon" href="./icon.png">
   <title>
   Taemon-Coolz's ZSG
   </title>
@@ -10,16 +11,18 @@
 <body>
   <b>
   <ul style=" padding-top: 10px; padding-bottom: 10px; align: center;">
+    <li class="menuitem"><a href="index.html" style="color: #00ff00;">HO<span class="highlited">M</span>E</a></li>
+    <li class="menuitem"><a href="downloads.html" style="color: #00ff00;">DO<span class="highlited">W</span>NL<span class="highlited">O</span>ADS</a></li>
     <li class="menuitem"><a href="changelog.md" style="color: #00ff00;">CH<span class="highlited">A</span>NGELOG</a></li>
     <li class="menuitem"><a href="points.md" style="color: #00ff00;">P<span class="highlited">O</span>INT GUID<span class="highlited">E</span></a></li>
   </ul>
 </b>
   <div class="titlediv">
-  <h1 class="title" style="font-size: 98px;"> <b> ZSG Beta Version 1.4</b></h1>
+  <h1 class="title" style="font-size: 98px;"> <b> ZSG Release 1.0.0</b></h1>
   </div>
- 
-<p class="paragraph" style="margin-left: 100px;"> <b>This is one location to play ZSG or view the changelog or other related docs.</b> <br></p>
-<iframe src="https://turbowarp.org/627476337/embed?addons=pause" width="499" height="416" allowtransparency="true" frameborder="0" scrolling="no" style="align: center;" allowfullscreen></iframe>
+
+<p class="paragraph" style="margin-left: 100px;"> <b>This is one location to play ZSG or view the changelog or other related docs. Soon to be the place to download the game.</b> <br></p>
+<iframe src="https://turbowarp.org/627476337/embed?addons=pause" width="499" height="416" allowtransparency="true" frameborder="0" scrolling="no" style="align: center; margin-left: 500;" allowfullscreen></iframe>
 
 </body>
 </html>
