--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <h1 class="title" style="font-size: 98px;"> <b> ZSG Release 1.0.0</b></h1>
   </div>
 
-<p class="paragraph" style="margin-left: 100px;"> <b>This is one location to play ZSG or view the changelog or other related docs. Soon to be the place to download the game.</b> <br></p>
+<p class="paragraph" style="margin-left: 100px;"> <b>This is one location to play  and download ZSG and view the changelog or other related docs.</b> <br></p>
 <iframe src="https://turbowarp.org/627476337/embed?addons=pause" width="499" height="416" allowtransparency="true" frameborder="0" scrolling="no" style="align: center; margin-left: 500;" allowfullscreen></iframe>
 
 </body>
