--- a/nft/apow.html
+++ b/nft/apow.html
@@ -1,1 +1,27 @@
-index.html
+<!DOCTYPE html>
+<html>
+ <head>
+   <link rel="stylesheet"
+         href="index.css">
+         <link rel="icon" href="../icon.png">
+  <title>
+  Taemon-Coolz's ZSG
+  </title>
+ </head>
+<body>
+  <b>
+  <ul style=" padding-top: 10px; padding-bottom: 10px; align: center;">
+    <li class="menuitem"><a href="../index.html" style="color: #00ff00;">HO<span class="highlited">M</span>E</a></li>
+    <li class="menuitem"><a href="../downloads.html" style="color: #00ff00;">DO<span class="highlited">W</span>NL<span class="highlited">O</span>ADS</a></li>
+    <li class="menuitem"><a href="../changelog.md" style="color: #00ff00;">CH<span class="highlited">A</span>NGELOG</a></li>
+    <li class="menuitem"><a href="../points.md" style="color: #00ff00;">P<span class="highlited">O</span>INT GUID<span class="highlited">E</span></a></li>
+  </ul>
+</b>
+  <div class="titlediv">
+  <h1 class="title" style="font-size: 98px;"> <b> NFT</b></h1>
+  </div>
+
+<p class="paragraph" style="margin-left: 100px;"> <b>This is my nft.</b> <br></p>
+
+</body>
+</html>
